--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Project Showcase</h1>
+        <h1>Le Ying, Chen</h1>
         <p>Explore my creative and technical works</p>
     </header>
 
     <nav>
-        <a href="index.html">Home</a>
-        <a href="project.html">Project</a>
+        <a href="/">Home</a>
+        <a href="projects/">Projects</a>
         <a href="#">Contact</a>
     </nav>
 
@@ -32,7 +32,7 @@
             <p>
                 <strong>Project</strong> is an interactive art piece inspired by the unique and relentless wind of Hsinchu. Check out the dedicated page for more details!
             </p>
-            <a href="project.html" style="color: #3498db; font-weight: bold;">View Project &rarr;</a>
+            <a href="projects/" style="color: #3498db; font-weight: bold;">View Project &rarr;</a>
         </section>
     </main>
 
