--- a/projects/index.html
+++ b/projects/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>Project</title>
 </head>
 <body>
     <header>
-        <h1>Project</h1>
+        <h1>Dissolve in Wind</h1>
         <p>Exploring the emotional and physical impact of Hsinchu's wind</p>
     </header>
 
