add dissolveinwind images

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<div id="main">
 
 					<!-- HOME Section -->
-					<section id="HOME" class="tab-content">
+					<section id="HOME" class="tab-content active">
 						<div class="spotlight">
 							<div class="content">
 								<header class="major">
@@ -58,7 +58,7 @@
 									Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.
 								</p>
 							</div>
-							<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+							<!-- <span class="image"><img src="images/pic01.jpg" alt="" /></span> -->
 						</div>
 
 						<div class="row">
@@ -67,7 +67,7 @@
 							</div>
 							<div class="col-8 col-12-medium">
 								<p style=text-align:left;><b>National Tsing Hua University </b><i>Sept. 2021 – Jun. 2025</i>
-								</br><a href="https://cgv.cs.nthu.edu.tw/" style="color: darkred;">Tsing Hua Computer Graphics & Vison Lab</a>, National Tsing Hua University, Taiwan
+								</br><a href="https://cgv.cs.nthu.edu.tw/" style="color: darkred;">Computer Graphics & Vison Lab</a>, National Tsing Hua University, Taiwan
 								<!-- </br>Advisors: Prof. <b><a href="https://scholar.google.com/" style="color: darkred;"></b></a> and Dr. <b><a href='https://scholar.google.com' style="color:darkred"></a></b> -->
 								</p>	
 							</div>
@@ -75,7 +75,7 @@
 					</section>
 
 					<!-- PROJECTS Section -->
-					<section id="PROJECTS" class="tab-content active">
+					<section id="PROJECTS" class="tab-content">
 						<header class="major">
 							<h2>Projects</h2>
 						</header>
@@ -102,7 +102,7 @@
 										An immersive installation transforming Hsinchu’s winds into dynamic soundscapes and AI-generated visual forms.
 									</p>
 									<p>
-										<a href="projects/dissovedinwinds/">Details</a> 
+										<a href="projects/dissolveinwind/">Details</a> 
 										<!-- <a href="#" target="_blank">arXiv</a> -->
 									</p>
 								</div>
@@ -197,7 +197,7 @@
 
 				<!-- Footer -->
 				<footer id="footer">
-					<p class="copyright">&copy; Le-Ying Chen 2024. All Rights Reserved.</p>
+					<p class="copyright">&copy; Le-Ying Chen 2025. All Rights Reserved.</p>
 				</footer>
 
 			</div>
